--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .app-main{
     width: 50vh;
-    margin: 100px;
+    margin-top: 100px;
     background-color: rgba(240, 248, 255, 0.6);
     padding: 20px;
     text-align: center;
@@ -48,7 +48,7 @@ body {
     line-height: 2rem;
     border-radius: 10px;
     background-color: rgba(240, 248, 255, 0.6);
-    height: 50vh;
+    height: 400px;
 }
 
 .location-details{
